--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,11 @@
     grid-template-rows: repeat(18,1fr);
     grid-template-columns: repeat(18,1fr);
 }
+
+.head{
+    background-color: red;
+}
+
+.food{
+    background-color: purple;
+}
