--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@
     justify-content: center;
     align-items: center;
 }
+#score{
+    position: absolute;
+    top:9px;
+    right:200px;
+    font-size: 39px;
+    font-weight: bold;
+}
+
 #board{
     background: linear-gradient(rgb(170,236,170),rgb(236,236,167));
     width:90vmin;
@@ -25,12 +33,20 @@
 }
 
 .head{
-    background-color: red;
+    background:linear-gradient(red,yellow);
+    border:2px solid purple;
+    transform: scale(1.02);
+
 }
 .snake{
     background-color: purple;
+    border:.25vmin solid white;
+    border-radius: 12px;
 }
 
 .food{
-    background-color: yellow;
+    background:linear-gradient(red,purple);
+    border:.25vmin solid black;
+    border-radius:8px;
+
 }
